[package]
name = "imggrider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imggrider"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sample"
harness = false

[dependencies]
libc = "0.2.150"
magick_rust = { git = "https://github.com/Hentioe/magick-rust.git", branch = "master" }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }
rustler = "0.30.0"

[profile.release]
strip = "debuginfo"
