[package]
name = "imggrider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imggrider"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sample"
harness = false

[dependencies]
libc = "0.2.155"
magick_rust = {git = "https://github.com/Hentioe/magick-rust.git", branch = "v1.0_buildfix"}
rustler = "0.33.0"
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["v4"] }

[profile.release]
strip = "debuginfo"
